fixed 2nd scrollbar

--- a/article.css
+++ b/article.css
@@ -15,7 +15,7 @@ html {
 
 header {
     width: 100%;
-    height: 6rem;
+    height: 6vh;
     padding-top: 1.5rem;
     padding-left: 10%;
     background-color: rgb(238, 238, 238);
@@ -65,6 +65,7 @@ body {
 
 main {
     display: flex;
+    height: 93vh;
 }
 
 /***** SIDE NAV *****/
@@ -127,7 +128,7 @@ main {
 
 #content {
     width: 85%;
-    height: 100vh;
+    /* height: 100vh; */
     padding: 6rem;
     padding-top: 2rem;
     padding-left: 15%;
